--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -21,9 +25,11 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
